plexserver/qbittorrent/templates/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-gluetun
  namespace: plex
  labels:
    app: qbittorrent-gluetun
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent-gluetun
  template:
    metadata:
      labels:
        app: qbittorrent-gluetun
    spec:
      containers:
        - name: gluetun
          image: ghcr.io/qdm12/gluetun
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: true
            privileged: true
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          volumeMounts:
            - name: s3-bucket
              mountPath: /gluetun
              subPath: gluetun
          resources:
            requests:
              memory: 200Mi
              cpu: "0.1"
            limits:
              memory: 500Mi
              cpu: "0.5"
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 200Mi
              cpu: "0.1"
            limits:
              memory: 500Mi
              cpu: "0.5"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 0
            runAsNonRoot: false
            runAsUser: 0
          startupProbe:
            initialDelaySeconds: 200
            failureThreshold: 10
            periodSeconds: 10
            tcpSocket:
              port: 8080
          volumeMounts:
            - mountPath: /config
              name: s3-bucket
              subpath: qbittorrent
            - mountPath: /downloads
              name: plex-media
              subPath: media
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: s3-bucket
          persistentVolumeClaim:
            claimName: s3-pvc
            readOnly: false
        - name: plex-media
          persistentVolumeClaim:
            claimName: plex-pvc
