plexserver/qbittorrent/templates/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: qbittorrent-gluetun
  namespace: plex
  annotations:
    metallb.universe.tf/allow-shared-ip: gluetun
spec:
  selector:
    app: qbittorrent-gluetun
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
      # nodePort: 30002
  # type: NodePort
  type: ClusterIP
